more minor text changes

--- a/Tribute/index.html
+++ b/Tribute/index.html
@@ -30,11 +30,11 @@
                   <li><strong>Automatic Transmission</strong> - 200 hp @ 7,000 rpm | 151 lb-ft @ 6,400—6,600 rpm</li>
                 </ul>
                 <hr>
-                <div id="article"><h4><strong>In America</strong>, car culture seems to always be about the Big Numbers. Zero to 60. The quarter mile. Top speed. Nobody cares how a car actually drives, or the experience it delivers, or how it makes you feel, just how it puts down the Big Numbers. This is why the Subaru BRZ has a hard time fitting in.</h4>
+                <div><h4><strong>In America</strong>, car culture seems to always be about the Big Numbers. Zero to 60. The quarter mile. Top speed. Nobody cares how a car actually drives, or the experience it delivers, or how it makes you feel, just how it puts down the Big Numbers. This is why the Subaru BRZ has a hard time fitting in.</h4>
                   <h4>Never mind the fact that you can’t even wring these cars out on the street without risking life or license! If it doesn’t make you feel like you’re swingin’ the biggest dick in town, it’s worthless.</h4>
                   <h4>We’ve all become so jaded by this current age of insane performance. We expect everything to have 400 horsepower at bare minimum, to crack the 0-60 mph run in no more than four seconds. Nobody has to earn their speed anymore. Nobody has to know how to actually drive, either, thanks to the array of electronic nannies that will sort everything out for us.</h4>
-                  <h4>If cars like that are the cheap but unhealthy fast foods of the car world — the McSportsCar, if you will — then the BRZ is the slow food, small plate restaurant where you take your time and eat something from a local farm. Except here there’s rear-wheel drive shenanigans, not mason jars and grating man-children with beards.</h4></div>
-                <h3>If you have time, you should read more about the incredible stroy behind the creation of this beautiful afforadable sports car.
+                  <h4>If cars like that are the cheap but unhealthy fast foods of the car world — the McSportsCar, if you will — then the BRZ is the slow food, small plate restaurant where you take your time and eat something from a local farm. Except here there’s rear-wheel drive shenanigans, not mason jars and grating man-children with beards. <a target="_blank" href="http://jalopnik.com/what-nobody-understands-about-the-subaru-brz-1698728189">Full Article</a></h4></div>
+                <h3>If you have time, you should also read more about the incredible stroy behind the creation of this beautiful sports car.
                 <a target="blank" href="http://blog.toyota.co.uk/tada-how-toyota-and-subaru-created-the-gt86">Tell all article</a>.</h3>
               </div>
             </div>
