more text changes

--- a/Tribute/index.html
+++ b/Tribute/index.html
@@ -21,7 +21,7 @@
                 BRZ stands for Boxer, Rear-wheel drive, Zenith. That's pretty clear. isn't it? Well, the first two parts are, and as for Zenith, that's just Subaru's way of saying this is the best it can do.
               </div>
               <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-left">
-                <h3>Here's a few specs of the 2017 BRZ:</h3>
+                <h3>2017 BRZ Specs:</h3>
                 <ul>
                   <li><strong>EPA</strong> - 21/29 mpg</li>
                   <li><strong>0 - 60</strong> - 6.2 secs</li>
