--- a/Arcade Classics/game.html
+++ b/Arcade Classics/game.html
@@ -17,10 +17,12 @@ var ballSpeedY = 7;
 var ballRadius = 10;
 
 //values of bricks
-const BRICK_W = 100;
-const BRICK_H = 50;
-const BRICK_COUNT = 8;
-var brickGrid = new Array(BRICK_COUNT);
+const BRICK_W = 80;
+const BRICK_H = 20;
+const BRICK_COLS = 10;
+const BRICK_GAP = 2;
+const BRICK_ROWS = 14;
+var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
 
 //values of the paddle
 const PADDLE_WIDTH = 100;
@@ -45,11 +47,9 @@ function updateMousePos(evt) {
 }
 
 function brickReset() {
-  for(var i=0; i<BRICK_COUNT; i++) {
+  for(var i=0; i<BRICK_COLS * BRICK_ROWS; i++) {
       brickGrid[i] = true;
-  } else {
-      brickGrid[i] = false;
-  }
+    }
 }
 
 window.onload = function() {
@@ -95,6 +95,16 @@ function moveAll() {
     //ballSpeedY *= -1;
   }
 
+  var ballBrickCol = Math.floor(ballX / BRICK_W);
+  var ballBrickRow = Math.floor(ballY / BRICK_H);
+  var brickIndexUnderball = rowColToArrayIndex(ballBrickCol, ballBrickRow);
+
+  if(ballBrickCol >= 0 && ballBrickCol < BRICK_COLS &&
+     ballBrickRow >= 0 && ballBrickRow < BRICK_ROWS) {
+
+        brickGrid[brickIndexUnderball] = false;
+  }
+
   var paddleTopEdgeY = canvas.height-PADDLE_DIST_FROM_EDGE;
   var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
   var paddleLeftEdgeX = paddleX;
@@ -112,25 +122,23 @@ function moveAll() {
   }
 }
 
+function rowColToArrayIndex(col, row) {
+  return col + BRICK_COLS * row;
+}
+
 function drawBricks() {
-  /*if(brickGrid[0]){
-    drawRect(BRICK_W*0,0, BRICK_W-2,BRICK_H, "blue");
-  }
-  if(brickGrid[1]){
-    drawRect(BRICK_W*1,0, BRICK_W-2,BRICK_H, "blue");
-  }
-  if(brickGrid[2]){
-    drawRect(BRICK_W*2,0, BRICK_W-2,BRICK_H, "blue");
-  }
-  if(brickGrid[3]){
-    drawRect(BRICK_W*3,0, BRICK_W-2,BRICK_H, "blue");
-  }*/
-  for(var i=0; i<BRICK_COUNT; i++) {
-    if(brickGrid[i]){
-      drawRect(BRICK_W*i,0, BRICK_W-2,BRICK_H, "blue");
-    } // end of is this brick here
-  } // end of for each brick
-} // end of drawbricks()
+  for(var eachRow=0; eachRow<BRICK_ROWS; eachRow++) {
+    for(var eachCol=0; eachCol<BRICK_COLS; eachCol++) {
+
+        var arrayIndex = rowColToArrayIndex(eachCol, eachRow);
+
+        if(brickGrid[arrayIndex]){
+          drawRect(BRICK_W*eachCol,BRICK_H*eachRow,
+              BRICK_W-BRICK_GAP,BRICK_H-BRICK_GAP, "blue");
+      } // end of is this brick here
+    } // end of for each brick
+  } // end of for each brick row
+} // end of drawbricks func
 
 function drawAll() {
   //draws the canvas
@@ -142,7 +150,6 @@ function drawAll() {
                       PADDLE_WIDTH,PADDLE_THICKNESS, 'green');
   //draws bricks obviously =D
   drawBricks();
-  drawText(mouseX + "," + mouseY, mouseX,mouseY, "yellow");
 }
 
 function drawRect(topLeftX,topLeftY, boxWidth,boxHeight, fillColor) {
